--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,9 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+#containermain {
+    
+}
 
 #container {
     width: 800px;
