--- a/css/main.css
+++ b/css/main.css
@@ -128,17 +128,15 @@ textarea {
    Author's custom styles
    ========================================================================== */
 #containermain {
-    
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:-430px;
+    margin-top:-265px;
 }
 
 #container {
-    width: 800px;
-    height: 580px;
-    margin:auto;
-    position: relative;
-    top: -700px;
-    padding: 10px 30px;
-    vertical-align: middle;
+    
 
 }
 .galleryls {
@@ -152,11 +150,12 @@ textarea {
 }
 .nav {
     height: 40px;
-    display: block;
-    width: 800px;
-    margin:-100px auto;
-    padding:0px 0px 38px 20px;
-    position: relative;
+display: block;
+width: 800px;
+left: 50%;
+padding: 0px 0px 38px 20px;
+position: absolute;
+margin-left: -420px;
     /*color: white;
     box-shadow: 0px 0px 7px #FFE;
     border: 1px solid #fff;
