new images, change justr last 2 imgs

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ textarea {
     color: #222;
 }
 a {
-    color:white!important;
+    color:#158F28;
 }
 body {
     font-size: 1em;
@@ -176,7 +176,7 @@ h3.right {
     text-decoration: none;
 }
 .nav h3 a:hover {
-    text-shadow:0px 0px 3px #fff;
+    text-shadow: 0px 0px 1px blueviolet;
 
 }
 .flip_gallery {
