--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,13 @@ margin-left: -210px;    /*color: white;
     border: 1px solid #fff;
     background-color: rgba(000,000,000,0.3);*/
 }
+
+.slidedownpage h3 {
+    font-family: Arial, sans-serif;
+    color:#eee;
+    font-family: arial;
+    font-weight: normal;
+}
 .nav h3 {
     float: left;
     display: block;
