--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,15 @@ margin-left: -210px;    /*color: white;
     color:#eee;
     font-family: arial;
     font-weight: normal;
+    text-align: center;
+}
+p.copyright {
+    color: #BBB;
+    font-size: 10px;
+    position: relative;
+    float: left;
+    margin: auto;
+    margin-top: 520px;
 }
 .nav h3 {
     float: left;
