--- a/css/main.css
+++ b/css/main.css
@@ -121,28 +121,17 @@ textarea {
     width:200px;
     margin-left:350px;
 }
+#prints_page,
 #contact_page {
     display:none;
-    
     width: 530px;
-    height: 800px;
-    position: absolute;
-
+    height: 450px;
+    position: relative;
     left: 50%;
-    margin-left: -270px;
+    margin-left: -205px;
     margin-top:100px;
 }
-#prints_page {
-    display:none;
-    
-    width: 530px;
-    height: 800px;
-    position: absolute;
 
-    left: 50%;
-    margin-left: -270px;
-    margin-top:100px;
-}
 .nav {
     height: 40px;
     display: block;
@@ -150,7 +139,7 @@ textarea {
     left: 50%;
     padding: 0px 0px 38px 20px;
     position: relative;
-margin-left: -210px;    /*color: white;
+    margin-left: -210px;    /*color: white;
     box-shadow: 0px 0px 7px #FFE;
     border: 1px solid #fff;
     background-color: rgba(000,000,000,0.3);*/
@@ -168,8 +157,11 @@ p.copyright {
     font-size: 10px;
     position: relative;
     float: left;
-    margin: auto;
+    left: 50%;
     margin-top: 520px;
+    clear: both;
+    margin: auto;
+    padding: 12px 0px;
 }
 .nav h3 {
     float: left;
