--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ hr {
  */
 
 img {
-    vertical-align: middle;
+    	margin-left:0;vertical-align: middle;
 }
 
 /*
@@ -109,7 +109,7 @@ textarea {
     left: 50%;
     display: block;
     float: left;
-    margin-left: -400px;
+    margin-left: -450px;
 }
 
 #prints_page {
@@ -164,18 +164,21 @@ p.copyright {
 .nav h3 {
     float: left;
     display: block;
-    width: 200px;
+    width: 70px;
     font-family: 'Give You Glory', cursive;
     font-size: 20px;
-    margin-left:-100px;
+    margin-left:-35px;
     left:50%;    
 	position:absolute;
 }
 .nav h3:first-child {
     left:20%;
+margin-left:0;
 }
 .nav h3:last-child {
-    right:15%;
+    right:21%;
+    left:auto;
+	margin-left:0;
 }
 /*h3.right {
     float:right;
